--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@
     </section>
     <!-- NOSSAS CONQUISTAS -->
 
+    <!-- VAMOS LÁ -->
+    <section class="todo-conteudo-vamos-la">
+        <div class="conteudo conteudo-vamos-la">
+            <div class="coluna">
+                <img src="img/iphone-com-fundo.png" alt="imagem iphone com logo Tecnogueto">
+            </div>
+            <div class="coluna">
+                <h1 class="titulo">Título</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A consectetur aspernatur.</p>
+                <a href="#" class="link-roxo">Vamos lá
+                    <i class="fas fa-long-arrow-alt-right"></i></a>
+            </div>
+        </div>
+    </section>
+    <!-- VAMOS LÁ -->
 </body>
 
 
