--- a/index.html
+++ b/index.html
@@ -154,6 +154,52 @@
         </div>
     </section>
     <!-- VAMOS LÁ -->
+
+    <!-- GERENCIE SEUS PROJETOS -->
+    <section class="todo-conteudo-gerencia-projetos">
+        <div class="conteudo conteudo-gerencia-projetos">
+            <div class="coluna">
+                <h1 class="titulo">Gerencie seus projetos de seu celular</h1>
+                <p>Baixe o aplicativo para gerenciar seus projetos, acompanhar o andamento e concluir tarefas sem
+                    procastinar. Fique na linha e conclua no prazo!</p>
+                <div class="botoes-lojas">
+                    <p>Baixe o aplicativo</p>
+                    <a href="https://play.google.com/store" target="_blank"><img src="img/botao-google-play.png"
+                            alt="Botao para o Google Play"></a>
+                    <a href="https://www.apple.com/shop" target="_blank"><img src="img/botao-apple-store.png"
+                            alt="Botao para Apple Store"></a>
+                </div>
+
+            </div>
+            <img src="img/iphone-logo-tecnogueto.png" alt="iphone com o logo da Tecnogueto">
+        </div>
+    </section>
+    <!-- GERENCIE SEUS PROJETOS -->
+
+    <footer class="rodape">
+        <div class="conteudo conteudo-rodape">
+            <div class="coluna">
+                <nav class="menu-rodape">
+                    <ul>
+                        <li>
+                            <a href="">Sobre</a>
+                        </li>
+                        <li>
+                            <a href="">Contato</a>
+                        </li>
+                    </ul>
+                </nav>
+                <p>© 2021 Tecnogueto. Todos os direitos reservados.</p>
+            </div>
+            <div class="botoes-download-rodape">
+                <p>Baixe o aplicativo</p>
+                <a href="https://play.google.com/store" target="_blank"><img src="img/botao-google-play.png"
+                        alt="Botao para o Google Play"></a>
+                <a href="https://www.apple.com/shop" target="_blank"><img src="img/botao-apple-store.png"
+                        alt="Botao para Apple Store"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 
