--- a/index.html
+++ b/index.html
@@ -98,6 +98,55 @@
     </section>
     <!-- RECURSOS -->
 
+    <!-- DEPOIMENTOS -->
+    <section class="todos-os-depoimentos">
+        <div class="conteudo">
+            <div class="coluna">
+                <h1 class="titulo">Histórias reais de clientes reais</h1>
+                <p>Inspire-se com essas histórias.</p>
+            </div>
+            <div class="bloco-depoimentos">
+                <div class="coluna">
+                    <div class="depoimento largura-350">
+                        <div class="textos-do-depoimento">
+                            <p>To quickly start my startup landing page design, I was looking for a landing page UI Kit.
+                                Landify
+                                is
+                                one of the best landing page UI kit I have come across. It’s so flexible, well organised
+                                and
+                                easily
+                                editable.</p>
+                            <h3>Floyd Miles</h3>
+                            <h4>Vice President, GoPro</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="coluna margin-negativa-110">
+                    <div class="depoimento largura-350">
+                        <div class="textos-do-depoimento">
+                            <p>I used landify and created a landing page for my startup within a week. The Landify UI
+                                Kit is simple and highly intuitive, so anyone can use it.</p>
+                            <h3>Jane Cooper</h3>
+                            <h4>CEO, Airbnb</h4>
+                        </div>
+                    </div>
+
+                    <div class="depoimento">
+                        <div class="textos-do-depoimento">
+                            <p>Landify saved our time in designing my company page.</p>
+                            <h3>Kristin Watson</h3>
+                            <h4>Co-Founder, BookMyShow</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+    <!-- DEPOIMENTOS -->
+
     <!-- NOSSAS CONQUISTAS -->
     <section class="todas-nossas-conquistas">
         <div class="conteudo conteudo-conquistas">
