--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;600;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/8cd635fca2.js" crossorigin=”anonymous”></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/banner.css">
+    <link rel="stylesheet" href="css/depoimentos.css">
+    <link rel="stylesheet" href="css/nossas-conquistas.css">
+    <link rel="stylesheet" href="css/vamos-la.css">
+    <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/gerencia-de-projetos.css">
 
 </head>
 
