Criação página sobre

--- a/index.html
+++ b/index.html
@@ -23,14 +23,10 @@
     <header class="cabecalho">
         <div class="conteudo conteudo-do-header">
             <div class="informacoes-do-cabecalho">
-                <img src="img/logo.png" alt="Logo da Tecnogueto">
+                <a href="index.html"><img src="img/logo.png" alt="Logo da Tecnogueto"></a>
                 <nav>
-                    <a href="#">
-                        Sobre
-                    </a>
-                    <a href="#">
-                        Contato
-                    </a>
+                    <a href="sobre.html">Sobre</a>
+                    <a href="#">Contato</a>
                 </nav>
             </div>
 
@@ -237,7 +233,7 @@
                 <nav class="menu-rodape">
                     <ul>
                         <li>
-                            <a href="">Sobre</a>
+                            <a href="sobre.html">Sobre</a>
                         </li>
                         <li>
                             <a href="">Contato</a>
