responsivo menu e banner

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/vamos-la.css">
     <link rel="stylesheet" href="css/rodape.css">
     <link rel="stylesheet" href="css/gerencia-de-projetos.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 
 </head>
 
@@ -125,7 +126,7 @@
                 </div>
 
                 <div class="coluna margin-negativa-110">
-                    <div class="depoimento largura-350">
+                    <div class="depoimento">
                         <div class="textos-do-depoimento">
                             <p>I used landify and created a landing page for my startup within a week. The Landify UI
                                 Kit is simple and highly intuitive, so anyone can use it.</p>
@@ -134,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="depoimento">
+                    <div class="depoimento largura-350">
                         <div class="textos-do-depoimento">
                             <p>Landify saved our time in designing my company page.</p>
                             <h3>Kristin Watson</h3>
