responsividade das imagens e blocos

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <section class="todo-conteudo-vamos-la">
         <div class="conteudo conteudo-vamos-la">
             <div class="coluna">
-                <img src="img/iphone-com-fundo.png" alt="imagem iphone com logo Tecnogueto">
+                <img class="imagem-responsiva" src="img/iphone-com-fundo.png" alt="imagem iphone com logo Tecnogueto">
             </div>
             <div class="coluna">
                 <h1 class="titulo">Título</h1>
@@ -223,7 +223,7 @@
                 </div>
 
             </div>
-            <img src="img/iphone-logo-tecnogueto.png" alt="iphone com o logo da Tecnogueto">
+            <img class="imagem-responsiva" src="img/iphone-logo-tecnogueto.png" alt="iphone com o logo da Tecnogueto">
         </div>
     </section>
     <!-- GERENCIE SEUS PROJETOS -->
