Colocando aspas conteudo depoimentos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h1 class="titulo-principal">Organize projetos. Faça mais.</h1>
                 <a href="" class="botao">Iniciar</a>
             </div>
-            <img src="img/iphone.png" alt="imagem celular" class="img-cel">
+            <img src="img/iphone.png" alt="imagem celular" class="img-cel imagem-responsiva margin-top-20">
         </div>
     </section>
     <!-- BANNER PRINCIPAL -->
@@ -105,12 +105,12 @@
     <section class="todos-os-depoimentos">
         <div class="conteudo">
             <div class="coluna">
-                <h1 class="titulo">Histórias reais de clientes reais</h1>
+                <h1 class="titulo titulo-historia">Histórias reais de clientes reais</h1>
                 <p>Inspire-se com essas histórias.</p>
             </div>
             <div class="bloco-depoimentos">
                 <div class="coluna">
-                    <div class="depoimento largura-350">
+                    <div class="depoimento largura-350 margin-top-20">
                         <div class="textos-do-depoimento">
                             <p>To quickly start my startup landing page design, I was looking for a landing page UI Kit.
                                 Landify
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="coluna margin-negativa-110">
+                <div class="coluna margin-negativa-110 margin-top-20">
                     <div class="depoimento">
                         <div class="textos-do-depoimento">
                             <p>I used landify and created a landing page for my startup within a week. The Landify UI
@@ -135,7 +135,7 @@
                         </div>
                     </div>
 
-                    <div class="depoimento largura-350">
+                    <div class="depoimento largura-350 margin-top-20">
                         <div class="textos-do-depoimento">
                             <p>Landify saved our time in designing my company page.</p>
                             <h3>Kristin Watson</h3>
@@ -157,7 +157,7 @@
                 <h1 class="titulo">Nossos 2 anos de conquistas</h1>
                 <p>Com nossas forças, alcançamos estes resultados</p>
             </div>
-            <div class="coluna bloco-de-numeros">
+            <div class="coluna bloco-de-numeros margin-top-20">
                 <div class="bloco-de-conquistas">
                     <i class="fas fa-cloud-download-alt cor-verde"></i>
                     <div>
