--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="index.html"><img src="img/logo.png" alt="Logo da Tecnogueto"></a>
                 <nav>
                     <a href="sobre.html">Sobre</a>
-                    <a href="#">Contato</a>
+                    <a href="contato.html">Contato</a>
                 </nav>
             </div>
 
