--- a/sobre.html
+++ b/sobre.html
@@ -20,10 +20,10 @@
             <div class="informacoes-do-cabecalho">
                 <a href="index.html"><img src="img/logo.png" alt="Logo da Tecnogueto"></a>
                 <nav>
-                    <a href="#">
+                    <a href="sobre.html">
                         Sobre
                     </a>
-                    <a href="#">
+                    <a href="contato.html">
                         Contato
                     </a>
                 </nav>
