--- a/index.html
+++ b/index.html
@@ -68,32 +68,32 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
 
-            <div class="bloco-de-recursos">
-                <i class="fas fa-allergies cor-rosa"></i>
+            <div class="bloco-de-recursos cor">
+                <i class="fas fa-stream cor-verde"></i>
                 <h3 class="titulo-bloco-de-recursos">Flexibilidade</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
 
             <div class="bloco-de-recursos">
-                <i class="fab fa-android cor-verde"></i>
+                <i class="fas fa-cogs cor-verde"></i>
                 <h3 class="titulo-bloco-de-recursos">Amigável do usuário</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
 
             <div class="bloco-de-recursos">
-                <i class="fab fa-angellist cor-rosa"></i>
+                <i class="fas fa-layer-group cor-verde"></i>
                 <h3 class="titulo-bloco-de-recursos">Multiplos Layouts</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
 
             <div class="bloco-de-recursos">
-                <i class="fas fa-angry cor-verde"></i>
+                <i class="fas fa-award cor-verde"></i>
                 <h3 class="titulo-bloco-de-recursos">Melhores componentes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
 
             <div class="bloco-de-recursos">
-                <i class="fab fa-angrycreative cor-rosa"></i>
+                <i class="fas fa-database cor-verde"></i>
                 <h3 class="titulo-bloco-de-recursos">Bem organizado</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis quia aut dolores veritatis.</p>
             </div>
@@ -159,7 +159,7 @@
             </div>
             <div class="coluna bloco-de-numeros margin-top-20">
                 <div class="bloco-de-conquistas">
-                    <i class="fas fa-cloud-download-alt cor-verde"></i>
+                    <i class="fas fa-cloud-download-alt cor-rosa"></i>
                     <div>
                         <h3>10,000+</h3>
                         <p>Downloads por dia</p>
@@ -180,7 +180,7 @@
                     </div>
                 </div>
                 <div class="bloco-de-conquistas">
-                    <i class="fas fa-globe-africa cor-verde"></i>
+                    <i class="fas fa-globe-africa cor-rosa"></i>
                     <div>
                         <h3>140</h3>
                         <p>Países</p>
@@ -237,7 +237,7 @@
                             <a href="sobre.html">Sobre</a>
                         </li>
                         <li>
-                            <a href="">Contato</a>
+                            <a href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </nav>
