--- a/contato.html
+++ b/contato.html
@@ -15,10 +15,11 @@
     <link rel="stylesheet" href="css/vamos-la.css">
     <link rel="stylesheet" href="css/rodape.css">
     <link rel="stylesheet" href="css/gerencia-projetos.css">
-    <link rel="stylesheet" href="css/responsivo.css">
     <link rel="stylesheet" href="css/contato.css">
+    <link rel="stylesheet" href="css/responsivo.css">
     <script src="https://kit.fontawesome.com/8cd635fca2.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header class="cabecalho">
         <div class="conteudo conteudo-do-header">
@@ -48,62 +49,83 @@
     <!-- Banner Principal -->
 
     <!-- Formulário de contato -->
-    <div class="conteudo">
-        <h1>Contato</h1>
+    <div class="conteudo conteudo-contato">
+
         <form action="">
-            <label for="nome">Nome:</label>
-            <input id="nome" type="text" name="nome" placeholder="Escreva seu nome completo">
-            <label for="email">E-mail:</label>
-            <input id="email" type="email" name="email" placeholder="Escreva seu endereço de e-mail">
-            <label for="estado">Estado:</label>
-            <select id="estado" name="estado">
-                <option selected="" value="">Selecione o Estado (UF)</option>
-                <option value="Acre">Acre</option>
-                <option value="Alagoas">Alagoas</option>
-                <option value="Amapá">Amapá</option>
-                <option value="Amazonas">Amazonas</option>
-                <option value="Bahia">Bahia</option>
-                <option value="Ceará">Ceará</option>
-                <option value="Distrito Federal">Distrito Federal</option>
-                <option value="Espírito Santo">Espírito Santo</option>
-                <option value="Goiás">Goiás</option>
-                <option value="Maranhão">Maranhão</option>
-                <option value="Mato Grosso">Mato Grosso</option>
-                <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
-                <option value="Minas Gerais">Minas Gerais</option>
-                <option value="Pará">Pará</option>
-                <option value="Paraíba">Paraíba</option>
-                <option value="Paraná">Paraná</option>
-                <option value="Pernambuco">Pernambuco</option>
-                <option value="Piauí">Piauí</option>
-                <option value="Rio de Janeiro">Rio de Janeiro</option>
-                <option value="Rio Grande do Sul">Rio Grande do Sul</option>
-                <option value="Rio Grande do Norte">Rio Grande do Norte</option>
-                <option value="Rondônia">Rondônia</option>
-                <option value="Roraima">Roraima</option>
-                <option value="Santa Catarina">Santa Catarina</option>
-                <option value="São Paulo">São Paulo</option>
-                <option value="Sergipe">Sergipe</option>
-                <option value="Tocantins">Tocantins</option>
-            </select>
-            <label>É urgente?</label>
-            <div>
-                <input type="radio" name="urgente" id="sim" value="sim">
-                <label for="sim">Sim</label>
+
+            <h1>Contato</h1>
+
+
+            <div class="nome item-formulario">
+                <label for="nome">Nome:</label>
+                <input class="input-form" id="nome" type="text" name="nome" placeholder="Escreva seu nome completo">
             </div>
-            <div>
-                <input type="radio" name="urgente" id="nao" value="nao">
-                <label for="nao">Não</label>
+
+            <div class="email item-formulario">
+                <label for="email">E-mail:</label>
+                <input class="input-form" id="email" type="email" name="email" placeholder="Escreva seu endereço de e-mail">
             </div>
-            <label for="mensagem">Mensagem:</label>
-            <textarea name="mensagem" id="mensagem" cols="30" rows="5"></textarea>
-            <button type="submit">Enviar</button>
+
+            <div class="estado item-formulario">
+                <label for="estado">Estado:</label>
+                <select class="input-form" id="estado" name="estado">
+                    <option selected="" value="">Selecione o Estado (UF)</option>
+                    <option value="Acre">Acre</option>
+                    <option value="Alagoas">Alagoas</option>
+                    <option value="Amapá">Amapá</option>
+                    <option value="Amazonas">Amazonas</option>
+                    <option value="Bahia">Bahia</option>
+                    <option value="Ceará">Ceará</option>
+                    <option value="Distrito Federal">Distrito Federal</option>
+                    <option value="Espírito Santo">Espírito Santo</option>
+                    <option value="Goiás">Goiás</option>
+                    <option value="Maranhão">Maranhão</option>
+                    <option value="Mato Grosso">Mato Grosso</option>
+                    <option value="Mato Grosso do Sul">Mato Grosso do Sul</option>
+                    <option value="Minas Gerais">Minas Gerais</option>
+                    <option value="Pará">Pará</option>
+                    <option value="Paraíba">Paraíba</option>
+                    <option value="Paraná">Paraná</option>
+                    <option value="Pernambuco">Pernambuco</option>
+                    <option value="Piauí">Piauí</option>
+                    <option value="Rio de Janeiro">Rio de Janeiro</option>
+                    <option value="Rio Grande do Sul">Rio Grande do Sul</option>
+                    <option value="Rio Grande do Norte">Rio Grande do Norte</option>
+                    <option value="Rondônia">Rondônia</option>
+                    <option value="Roraima">Roraima</option>
+                    <option value="Santa Catarina">Santa Catarina</option>
+                    <option value="São Paulo">São Paulo</option>
+                    <option value="Sergipe">Sergipe</option>
+                    <option value="Tocantins">Tocantins</option>
+                </select>
+
+            </div>
+
+            <div class="urgente item-formulario">
+                <label>É urgente?</label>
+                <span>
+                    <input type="radio" name="urgente" id="sim" value="sim">
+                    <label for="sim">Sim</label>
+                </span>
+
+                <span>
+                    <input type="radio" name="urgente" id="nao" value="nao">
+                    <label for="nao">Não</label>
+                </span>
+            </div>
+
+            <div class="mensagem item-formulario">
+                <label for="mensagem">Mensagem:</label>
+                <textarea class="input-form" name="mensagem" id="mensagem" cols="30" rows="5"></textarea>
+                <button class="botao-form" type="submit">Enviar</button>
+            </div>        
+
         </form>
     </div>
     <!-- Formulário de contato -->
 
     <!-- Gerencia Seus projetos -->
-    <footer class="rodape">
+    <footer class="rodape rodape-contato">
         <div class="conteudo conteudo-rodape">
             <div class="coluna">
                 <nav class="menu-rodape">
