--- a/sobre.html
+++ b/sobre.html
@@ -11,6 +11,8 @@
     <script src="https://kit.fontawesome.com/8cd635fca2.js" crossorigin=”anonymous”></script>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/rodape.css">
+    <link rel="stylesheet" href="css/responsivo.css">
+
 
 </head>
 
