Correções página contato

--- a/contato.html
+++ b/contato.html
@@ -103,15 +103,17 @@
 
             <div class="urgente item-formulario">
                 <label>É urgente?</label>
-                <span>
-                    <input type="radio" name="urgente" id="sim" value="sim">
-                    <label for="sim">Sim</label>
-                </span>
 
-                <span>
-                    <input type="radio" name="urgente" id="nao" value="nao">
-                    <label for="nao">Não</label>
-                </span>
+                <div class="yes-no">
+                    <span>
+                        <input type="radio" name="urgente" id="sim" value="sim">
+                        <label for="sim">Sim</label>
+                    </span>
+                    <span>
+                        <input type="radio" name="urgente" id="nao" value="nao">
+                        <label for="nao">Não</label>
+                    </span>    
+                </div>
             </div>
 
             <div class="mensagem item-formulario">
